<resources>
    <string name="app_name">InHomeCareApp</string>
    <string name="customer">Customer</string>
    <string name="care_giver">Caregiver</string>
    <string name="Name">Customer Name</string>
    <string name="customer_name">Name</string>
    <string name="customer_password">Password</string>
    <string name="customer_email">Email</string>
    <string name="customer_phone_number">Phone Number</string>
    <string name="customer_register">Register</string>
    <string name="customer_forget_password">Forget password</string>
    <string name="caregiver_id">Id</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="content_description_more">content_description_more</string>
    <string name="more">more</string>
    <string name="care_giver_profile">care_giver_profile</string>
    <string name="care_giver_logout">care_giver_logout</string>
    <string name="back">back</string>
    <string name="content_description_back">content_description_back</string>
    <string name="home">home</string>
    <string name="content_description_home">content_description_home</string>
    <string name="profile">profile</string>
    <string name="content_description_profile">content_description_profile</string>
    <string name="logout">logout</string>
    <string name="content_description_logout">content_description_logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="type_of_service">Type of service</string>
    <string name="category">Category</string>
    <string name="age">Age</string>
    <string name="message">Message</string>
    <string name="contract">contracts</string>
    <string name="hourly_service">Hourly service</string>
    <string name="service_type">Service Type</string>
    <string name="please_write_your_need_in_detail">Please write your need in detail</string>
    <string name="please_write_your_needs_in_detail" />
    <string name="rate">Rate</string>
</resources>