<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        android:contentDescription="@string/content_description_profile"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:contentDescription="@string/content_description_home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="ifRoom"
        />

</menu>