<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".customer.CustomerHome">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/childrens"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/special_needs"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/elderly"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        android:layout_margin="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_type_of_service"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:boxStrokeColor="@color/blue"
        android:textColorHint="@color/blue"
        app:endIconTint="@color/blue"
        android:layout_height="wrap_content"
        android:hint="@string/type_of_service">

        <AutoCompleteTextView
            android:id="@+id/autoComplete_service_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_category_of_service"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/blue"
            android:textColorHint="@color/blue"
            app:endIconTint="@color/blue"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:boxStrokeColor="@color/blue"
            android:textColorHint="@color/blue"
            app:endIconTint="@color/blue"
            android:hint="@string/age">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_ages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/find_caregiverBtn"
            android:layout_width="@dimen/_200sdp"
            android:background="@drawable/button_shape"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="Find caregiver"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"

            app:menu="@menu/bottom_app_par_customer"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:layout_anchor="@id/bottomAppBar"
            />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>